// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`block calculation can calculate some blocks 1 1`] = `
BlockSet {
  "blocks": Array [
    ContentBlock {
      "assemblyName": "volvox",
      "end": 800,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": false,
      "key": "volvox:ctgA:1-800",
      "offsetPx": 0,
      "parentRegion": Object {
        "assemblyName": "volvox",
        "end": 10000,
        "refName": "ctgA",
        "start": 0,
      },
      "refName": "ctgA",
      "start": 0,
      "widthPx": 800,
    },
    ContentBlock {
      "assemblyName": "volvox",
      "end": 1600,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": false,
      "key": "volvox:ctgA:801-1600",
      "offsetPx": 800,
      "parentRegion": Object {
        "assemblyName": "volvox",
        "end": 10000,
        "refName": "ctgA",
        "start": 0,
      },
      "refName": "ctgA",
      "start": 800,
      "widthPx": 800,
    },
  ],
}
`;

exports[`block calculation can calculate some blocks 2 1`] = `
BlockSet {
  "blocks": Array [
    ContentBlock {
      "assemblyName": "volvox",
      "end": 100,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": true,
      "key": "volvox:ctgA:1-100",
      "offsetPx": 0,
      "parentRegion": Object {
        "assemblyName": "volvox",
        "end": 100,
        "refName": "ctgA",
        "start": 0,
      },
      "refName": "ctgA",
      "start": 0,
      "widthPx": 100,
    },
    ContentBlock {
      "assemblyName": "volvox",
      "end": 200,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": true,
      "key": "volvox:ctgB:101-200",
      "offsetPx": 102,
      "parentRegion": Object {
        "assemblyName": "volvox",
        "end": 200,
        "refName": "ctgB",
        "start": 100,
      },
      "refName": "ctgB",
      "start": 100,
      "widthPx": 100,
    },
  ],
}
`;

exports[`block calculation can calculate some blocks 5 1`] = `
BlockSet {
  "blocks": Array [
    ContentBlock {
      "assemblyName": "volvox",
      "end": 5600,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": false,
      "key": "volvox:ctgA:4801-5600",
      "offsetPx": 4800,
      "parentRegion": Object {
        "assemblyName": "volvox",
        "end": 10000,
        "refName": "ctgA",
        "start": 0,
      },
      "refName": "ctgA",
      "start": 4800,
      "widthPx": 800,
    },
    ContentBlock {
      "assemblyName": "volvox",
      "end": 6400,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": false,
      "key": "volvox:ctgA:5601-6400",
      "offsetPx": 5600,
      "parentRegion": Object {
        "assemblyName": "volvox",
        "end": 10000,
        "refName": "ctgA",
        "start": 0,
      },
      "refName": "ctgA",
      "start": 5600,
      "widthPx": 800,
    },
  ],
}
`;

exports[`block calculation can calculate some blocks 6 1`] = `
BlockSet {
  "blocks": Array [
    ContentBlock {
      "assemblyName": "volvox",
      "end": 200,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": true,
      "key": "volvox:ctgA:1-200",
      "offsetPx": 0,
      "parentRegion": Object {
        "assemblyName": "volvox",
        "end": 200,
        "refName": "ctgA",
        "start": 0,
      },
      "refName": "ctgA",
      "start": 0,
      "widthPx": 200,
    },
    ContentBlock {
      "assemblyName": "volvox",
      "end": 800,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": false,
      "key": "volvox:ctgB:1-800",
      "offsetPx": 202,
      "parentRegion": Object {
        "assemblyName": "volvox",
        "end": 1000,
        "refName": "ctgB",
        "start": 0,
      },
      "refName": "ctgB",
      "start": 0,
      "widthPx": 800,
    },
  ],
}
`;

exports[`block calculation can calculate some blocks 7 1`] = `
BlockSet {
  "blocks": Array [
    ContentBlock {
      "assemblyName": "volvox",
      "end": 800,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": false,
      "key": "volvox:ctgB:1-800",
      "offsetPx": 202,
      "parentRegion": Object {
        "assemblyName": "volvox",
        "end": 1000,
        "refName": "ctgB",
        "start": 0,
      },
      "refName": "ctgB",
      "start": 0,
      "widthPx": 800,
    },
    ContentBlock {
      "assemblyName": "volvox",
      "end": 1000,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": true,
      "key": "volvox:ctgB:801-1000",
      "offsetPx": 1002,
      "parentRegion": Object {
        "assemblyName": "volvox",
        "end": 1000,
        "refName": "ctgB",
        "start": 0,
      },
      "refName": "ctgB",
      "start": 800,
      "widthPx": 200,
    },
  ],
}
`;

exports[`block calculation can calculate some blocks 8 1`] = `
BlockSet {
  "blocks": Array [
    ContentBlock {
      "assemblyName": "volvox",
      "end": 1600,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": false,
      "key": "volvox:ctgB:801-1600",
      "offsetPx": 1002,
      "parentRegion": Object {
        "assemblyName": "volvox",
        "end": 10000000,
        "refName": "ctgB",
        "start": 0,
      },
      "refName": "ctgB",
      "start": 800,
      "widthPx": 800,
    },
    ContentBlock {
      "assemblyName": "volvox",
      "end": 2400,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": false,
      "key": "volvox:ctgB:1601-2400",
      "offsetPx": 1802,
      "parentRegion": Object {
        "assemblyName": "volvox",
        "end": 10000000,
        "refName": "ctgB",
        "start": 0,
      },
      "refName": "ctgB",
      "start": 1600,
      "widthPx": 800,
    },
  ],
}
`;

exports[`block calculation can calculate some blocks 9 1`] = `
BlockSet {
  "blocks": Array [
    ContentBlock {
      "assemblyName": "volvox",
      "end": 3200,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": false,
      "key": "volvox:ctgA:1601-3200",
      "offsetPx": 800,
      "parentRegion": Object {
        "assemblyName": "volvox",
        "end": 50000,
        "refName": "ctgA",
        "start": 0,
      },
      "refName": "ctgA",
      "start": 1600,
      "widthPx": 800,
    },
    ContentBlock {
      "assemblyName": "volvox",
      "end": 4800,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": false,
      "key": "volvox:ctgA:3201-4800",
      "offsetPx": 1600,
      "parentRegion": Object {
        "assemblyName": "volvox",
        "end": 50000,
        "refName": "ctgA",
        "start": 0,
      },
      "refName": "ctgA",
      "start": 3200,
      "widthPx": 800,
    },
  ],
}
`;

exports[`block calculation can calculate some blocks 10 1`] = `
Array [
  ContentBlock {
    "assemblyName": "volvox",
    "end": 140,
    "isLeftEndOfDisplayedRegion": true,
    "isRightEndOfDisplayedRegion": false,
    "key": "volvox:ctgA:101-140",
    "offsetPx": 0,
    "parentRegion": Object {
      "assemblyName": "volvox",
      "end": 200,
      "refName": "ctgA",
      "start": 100,
    },
    "refName": "ctgA",
    "start": 100,
    "widthPx": 800,
  },
  ContentBlock {
    "assemblyName": "volvox",
    "end": 180,
    "isLeftEndOfDisplayedRegion": false,
    "isRightEndOfDisplayedRegion": false,
    "key": "volvox:ctgA:141-180",
    "offsetPx": 800,
    "parentRegion": Object {
      "assemblyName": "volvox",
      "end": 200,
      "refName": "ctgA",
      "start": 100,
    },
    "refName": "ctgA",
    "start": 140,
    "widthPx": 800,
  },
]
`;

exports[`horizontally flipped displayed regions with elided region 1`] = `
BlockSet {
  "blocks": Array [
    ElidedBlock {
      "assemblyName": "volvox",
      "elidedBlockCount": 1,
      "end": 1,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": true,
      "key": "volvox:ctgA:1-1-reversed",
      "offsetPx": 0,
      "parentRegion": Object {
        "assemblyName": "volvox",
        "end": 1,
        "refName": "ctgA",
        "start": 0,
      },
      "refName": "ctgA",
      "start": 0,
      "widthPx": 1,
    },
    ContentBlock {
      "assemblyName": "volvox",
      "end": 10000,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": false,
      "key": "volvox:ctgA:9201-10000-reversed",
      "offsetPx": 3,
      "parentRegion": Object {
        "assemblyName": "volvox",
        "end": 10000,
        "refName": "ctgA",
        "start": 0,
      },
      "refName": "ctgA",
      "start": 9200,
      "widthPx": 800,
    },
    ContentBlock {
      "assemblyName": "volvox",
      "end": 9200,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": false,
      "key": "volvox:ctgA:8401-9200-reversed",
      "offsetPx": 803,
      "parentRegion": Object {
        "assemblyName": "volvox",
        "end": 10000,
        "refName": "ctgA",
        "start": 0,
      },
      "refName": "ctgA",
      "start": 8400,
      "widthPx": 800,
    },
  ],
}
`;

exports[`horizontally flipped displayed regions without elided region 1`] = `
BlockSet {
  "blocks": Array [
    ContentBlock {
      "assemblyName": "volvox",
      "end": 200,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": true,
      "key": "volvox:ctgA:101-200-reversed",
      "offsetPx": 0,
      "parentRegion": Object {
        "assemblyName": "volvox",
        "end": 200,
        "refName": "ctgA",
        "start": 100,
      },
      "refName": "ctgA",
      "start": 100,
      "widthPx": 100,
    },
    ContentBlock {
      "assemblyName": "volvox",
      "end": 600,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": true,
      "key": "volvox:ctgA:501-600-reversed",
      "offsetPx": 102,
      "parentRegion": Object {
        "assemblyName": "volvox",
        "end": 600,
        "refName": "ctgA",
        "start": 500,
      },
      "refName": "ctgA",
      "start": 500,
      "widthPx": 100,
    },
  ],
}
`;

exports[`reverse block calculation 1 1`] = `
BlockSet {
  "blocks": Array [
    ContentBlock {
      "assemblyName": "volvox",
      "end": 10000,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": false,
      "key": "volvox:ctgA:9201-10000-reversed",
      "offsetPx": 0,
      "parentRegion": Object {
        "assemblyName": "volvox",
        "end": 10000,
        "refName": "ctgA",
        "start": 0,
      },
      "refName": "ctgA",
      "start": 9200,
      "widthPx": 800,
    },
    ContentBlock {
      "assemblyName": "volvox",
      "end": 9200,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": false,
      "key": "volvox:ctgA:8401-9200-reversed",
      "offsetPx": 800,
      "parentRegion": Object {
        "assemblyName": "volvox",
        "end": 10000,
        "refName": "ctgA",
        "start": 0,
      },
      "refName": "ctgA",
      "start": 8400,
      "widthPx": 800,
    },
  ],
}
`;
